# composable-rust

./: .env.example  .gitignore  AUTH_CLIPPY_REMAINING.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PHASE1_REVIEW.md  PHASE3_CODE_REVIEW.md  README.md  SECTION3_REVIEW.md  fix_auth_docs.sh  rustfmt.toml
agent-patterns/: .dockerignore  AUDIT.md  AUDIT_SECURITY_TODO.md  CONFIG.md  Cargo.toml  DOCKER.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  grafana-datasources.yml  prometheus.yml
agent-patterns/dashboards/: README.md  agent-overview.json  performance-slo.json
agent-patterns/docs/: tracing-guide.md
agent-patterns/examples/: config.dev.toml  config.prod.toml
agent-patterns/k8s/: README.md
agent-patterns/src/: aggregation.rs  analytics.rs  audit.rs  caching.rs  config.rs  context.rs  context_propagation.rs  evaluator.rs  health.rs  http_propagation.rs  lib.rs  memory.rs  metrics.rs  orchestrator.rs  parallelization.rs  prompt_chain.rs  routing.rs  security.rs  shutdown.rs  tracing_support.rs
agent-patterns/tests/: audit_security_integration.rs
anthropic/: Cargo.toml
anthropic/src/: client.rs  error.rs  lib.rs  messages.rs  types.rs
auth/: Cargo.toml  README.md  TODO.md
auth/.sqlx/: query-0252c660fdac77c3ee514af3a5e38168fa8fa048a6c9b0d071fe34acefcc0552.json  query-033249a92ebacbdedde2f50f77409d6991859a4cfbcd292459314e8d00825438.json  query-0498980079197c39c1801565049437597f1960b559fb6ee4f9defc4f9218a7ba.json  query-0656a9a4f77817cf37747926b97c08985e25cf98ebd6ba559ab5dc6ed37c591f.json  query-0ebe9cf39ce1cb5182ca8926a3af1703a05a03fdded6574445bb81ab3fd59d0a.json  query-0fc81dd9233ff900b571f1440f1e520f1fae60ceff3a2301dc49b79e37163355.json  query-1a7b4a2434ea6b5a7bcee4f89b45c35f57de5fdc9acdcddd8811f42027f0bf89.json  query-1ab0e8fd1e8263e2ee0bf3cdb1860e043548627906bfe4f240ffa1ac42d73373.json  query-1dba9e39fd0a67f72fdf30533025dd9b81024741a457a09efeb749b57d924472.json  query-2cd7ed1928111c7b84cfd39b577e6b6c249e65c618ca8213ff431e548a4e2373.json  query-33224a0f0ecff602ce8a17d951d6f920a17bc90b4d483783c1fbcd495eb1ccf7.json  query-33790ca4061983f57ee0db3a6388216320235bf54c559973e675f589af1dd227.json  query-38b1b9c56b6e4690f1923585db92942475280b73cf13af1efc0a105c0d2db47b.json  query-3cc24889de8e5404234cbcbaa6270e33d9d27d8729c5d94ab55f79cf0bd32f67.json  query-453535ac6f26224470c772dd2a6259a29309fb87e4ddaa4d6e464c0c2aa471b4.json  query-4745f51c631fa02389b0fc46fe2c0a1f3c8f011bc98de6f287ee6da191d39956.json  query-52ab8822b917f9c7c47fac062c3b70178ec93efd960dce409134e6163db652d0.json  query-5ed17b841b8af07694e198a3b6e65bb0176ecebf41c94e99fe2b23e27b95f0b3.json  query-5fa1a99bd5579a292c3174af5d366caf4d10b68e41f4a2f9346a57a50851207a.json  query-602ff72e6c93d0a767e7a2572030f427175d5c0bcde3c3a6be3e05177b5f76e5.json  query-6cd9880056db62c08feb7120ea25eb428af3f48fe9a44c7247be7baaaefc9d8e.json  query-6d7ef9c20faacb4266832260a97278576cb89604ebcf0f4d56e2326dc25b853d.json  query-6f8d37cf78143a9009d3ea823f36288828ca94198751154a1bf01bee24677ee5.json  query-748d29f72a6b699ba7ecf2a72b72282fe3b37fd4fc51963fa9f6a59f4d9b0c20.json  query-759882998069b1465f4c0b6fb12e34159efb9a6398d687e3b08b39148fd0bb01.json  query-78c5b15388b8ce0026838cb5681c39623ad7a70ac44711e418b28033afbead88.json  query-89acf61c623759345d7f5ee8765c7cb4534acf469d276aa0a674512f5966d70f.json  query-913147ac85d00e7677346666b79e7429ad88b90eec2bcff10fbf2c0a25b699e3.json  query-a8799db4f9c9d6bd821721cf2b22034f095edff84f16855b3cc67f7a7491ae68.json  query-ad4ee487dc250369329ee79905fe75d967d43c99a99cc0493296fcdc005a8a72.json  query-bd4d338aa8781cfa0fe62d0fe8bbddd0eee0a1cb89d40a41c7d62007ff11a15b.json  query-bf5e44928370ea8cd751d4a44ff2c0e647350aac63046ae2832b7346950d94ba.json  query-bfc68ea33370dbd636e125f63963331968e175d43249c31db85500b2b03071fe.json  query-c46848dfc8b7e035b10db47fdbf123b68a367ceaf6e5e59176e39eb178efdc0d.json  query-d9b0f81a7f18d1a0857f05575aee49b31f7e7a9a620c40ad58ee64b0a07e9976.json  query-dd9d8662358a3ad410a1f6a18119e78b7fd164852d0e49683ec98080f4c9eb0d.json  query-e24242065dc12dc7c7036fb47059034b224c5f16ae70f8c060d9c1004d0962d0.json  query-e693e7c17bacfe6221f1091b09cf631c73740c0614e6dd35834bf187f1ee36ea.json  query-ef008452eefb11b0f08fd7cbf3773d54ff175895413879c09fa6c1fdf1945200.json
auth/docs/: SECURITY_LOGGING.md
auth/migrations/: 001_create_users_and_devices.sql  002_rename_to_projections.sql  003_fix_passkey_counter_type.sql  004_add_projection_sequence_tracking.sql
auth/scripts/: verify.sh
auth/src/: actions.rs  config.rs  constants.rs  effects.rs  environment.rs  error.rs  events.rs  lib.rs  projection.rs  router.rs  state.rs  utils.rs
auth/tests/: magic_link_integration.rs  oauth_integration.rs  passkey_integration.rs  security_tests.rs  token_store_bincode_bug.rs
core/: Cargo.toml  README.md
core/src/: agent.rs  composition.rs  effect_macros.rs  event.rs  event_bus.rs  event_store.rs  lib.rs  projection.rs  stream.rs
examples/agent-patterns-demo/: Cargo.toml  README.md
examples/banking/: Cargo.toml
examples/basic-agent/: Cargo.toml
examples/checkout-saga/: Cargo.toml
examples/counter/: Cargo.toml  README.md
examples/metrics-demo/: Cargo.toml
examples/order-processing/: Cargo.toml  README.md
examples/order-projection/: Cargo.toml  README.md
examples/production-agent/: .dockerignore  .env.example  Cargo.toml  DEPLOYMENT-CHECKLIST.md  Dockerfile  QUICKSTART.md  README.md  config.toml  fly.toml
examples/ticketing/: .dockerignore  .env.example  .env.production.example  Cargo.toml  DEPLOYMENT.md  Dockerfile  OPERATIONS.md  OPTIMISTIC_CONCURRENCY.md  PHASE_10_1_REVIEW.md  PHASE_10_6-8_REVIEW.md  QUICKSTART.md  README.md  TODO.md  docker-compose.test.yml  docker-compose.yml
examples/tool-showcase/: Cargo.toml
examples/weather-agent/: Cargo.toml
macros/: Cargo.toml
macros/src/: lib.rs
macros/tests/: action_macro_test.rs  (+1 more)
postgres/: Cargo.toml  README.md
projections/: Cargo.toml
redpanda/: Cargo.toml  README.md
runtime/: Cargo.toml  README.md
testing/: Cargo.toml  README.md
tools/: Cargo.toml
web/: Cargo.toml  README.md
(+388 files in other folders)
