[workspace]
resolver = "2"
members = [
    "core",
    "runtime",
    "testing",
    "postgres",
    "redpanda",
    "projections",
    "macros",
    "examples/counter",
    "examples/order-processing",
    "examples/order-projection",
    "examples/checkout-saga",
    "examples/metrics-demo",
    "examples/todo",
    "examples/banking",
    "examples/ticketing",
    "auth",
    "web",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
authors = ["Composable Rust Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/composable-rust"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
bincode = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# Database (for Phase 2+)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid", "json"] }

# Message queue (for Phase 3+)
rdkafka = "0.36"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
smallvec = "1"
rand = "0.8"

# Development dependencies
proptest = "1"
tokio-test = "0.4"
criterion = "0.5"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = false

[profile.bench]
inherits = "release"

[profile.test]
opt-level = 0

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
# Pedantic lints (lower priority so specific lints can override)
pedantic = { level = "warn", priority = -1 }
# Deny common issues
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
# Performance
missing_const_for_fn = "warn"
# Cognitive complexity
cognitive_complexity = "warn"
# Documentation
missing_errors_doc = "warn"
missing_panics_doc = "warn"
