[package]
name = "composable-rust-agent-patterns"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Core
composable-rust-core = { path = "../core" }
composable-rust-anthropic = { path = "../anthropic" }

# Async runtime
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
async-stream = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = "1"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time
chrono = { workspace = true }

# Utilities
smallvec = { workspace = true }
rand = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }

# Observability
tracing = { workspace = true }
tracing-opentelemetry = "0.23"
opentelemetry = { version = "0.22", features = ["trace"] }
opentelemetry_sdk = { version = "0.22", features = ["trace"] }
opentelemetry-jaeger = "0.21"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics
prometheus = { version = "0.13", features = ["process"] }
once_cell = "1.19"

# Async utilities
async-trait = "0.1"

# Database (for audit logging)
sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "tls-rustls", "uuid"], optional = true }

# Configuration
toml = "0.8"

# HTTP client (for trace propagation examples)
reqwest = { version = "0.12", features = ["json"] }

[features]
default = []
audit-postgres = ["sqlx"]

[dev-dependencies]
tokio-test = { workspace = true }
composable-rust-testing = { path = "../testing" }
