[package]
name = "composable-rust-anthropic"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
async-stream = { workspace = true }

# HTTP client
reqwest = { workspace = true, features = ["json", "stream"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = { workspace = true }

# Utilities
chrono = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
wiremock = "0.6"
