[package]
name = "composable-rust-postgres"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
composable-rust-core = { path = "../core" }
sqlx = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
chrono = "0.4"
serde_json = "1"

[dev-dependencies]
tokio-test = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
serde_json = "1"

[lints]
workspace = true
