[package]
name = "composable-rust-redpanda"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Redpanda event bus implementation for the Composable Rust architecture"

[lints]
workspace = true

[dependencies]
# Local dependencies
composable-rust-core = { path = "../core" }

# Async
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
futures = { workspace = true }
async-stream = "0.3"

# Kafka client
rdkafka = { version = "0.36", features = ["cmake-build", "tokio"] }

# Serialization
bincode = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Observability
tracing = { workspace = true }

[dev-dependencies]
# Testing
tokio-test = { workspace = true }

# For testing event serialization
serde = { workspace = true }
serde_json = "1"

# Note: Integration tests with real Redpanda require testcontainers
# For now, unit tests validate the implementation
# Production deployments should test with actual Redpanda instances
