[package]
name = "composable-rust-tools"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
# Core
composable-rust-core = { path = "../core" }

# Async runtime
tokio = { workspace = true, features = ["full", "fs", "time"] }
futures = { workspace = true }
async-stream = { workspace = true }

# HTTP client
reqwest = { workspace = true, features = ["json", "stream"] }

# Serialization
serde = { workspace = true }
serde_json = "1"

# Error handling
thiserror = { workspace = true }

# Time tools
chrono = { workspace = true }
chrono-tz = "0.10"

# Calculation tools
meval = "0.2"

# Data tools
jsonpath-rust = "0.7"
regex = "1"

# File I/O tools
pdf-extract = "0.7"
image = "0.25"
base64 = "0.22"

# HTML to Markdown
html2md = "0.2"

# Utilities
smallvec = { workspace = true }

# Observability
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = "3"
