[package]
name = "order-processing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Order Processing example demonstrating event sourcing with EventStore"
publish = false

[lints]
workspace = true

[dependencies]
# Local dependencies
composable-rust-core = { path = "../../core" }
composable-rust-runtime = { path = "../../runtime" }
composable-rust-testing = { path = "../../testing" }
composable-rust-postgres = { path = "../../postgres", optional = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
bincode = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time
chrono = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }

[features]
default = []
postgres = ["dep:composable-rust-postgres"]

[[bin]]
name = "order-processing"
path = "src/main.rs"
