[package]
name = "order-projection-example"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
# Core framework
composable-rust-core = { path = "../../core" }
composable-rust-projections = { path = "../../projections" }

# Order domain (reuse from order-processing example)
order-processing = { path = "../order-processing" }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Database
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-rustls", "chrono"] }

# Serialization
serde = { workspace = true }
serde_json = "1"
bincode = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Time
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }

[[bin]]
name = "order-projection"
path = "src/main.rs"
