[package]
name = "production-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
composable-rust-core = { path = "../../core" }
composable-rust-runtime = { path = "../../runtime" }
composable-rust-agent-patterns = { path = "../../agent-patterns", features = ["audit-postgres"] }
composable-rust-anthropic = { path = "../../anthropic" }
composable-rust-postgres = { path = "../../postgres" }
composable-rust-redpanda = { path = "../../redpanda" }
composable-rust-projections = { path = "../../projections" }
composable-rust-auth = { path = "../../auth" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = "1"

# HTTP
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# UUID
uuid = { version = "1", features = ["v4"] }

# Error handling
thiserror = { workspace = true }

# Time
chrono = { workspace = true }

# SmallVec
smallvec = { workspace = true }

# Async trait
async-trait = "0.1"

# Environment variables
dotenvy = "0.15"

# Futures
futures = { workspace = true }

# Database
sqlx = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
composable-rust-testing = { path = "../../testing" }
