[package]
name = "ticketing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Framework dependencies
composable-rust-core = { path = "../../core" }
composable-rust-runtime = { path = "../../runtime" }
composable-rust-testing = { path = "../../testing" }
composable-rust-macros = { path = "../../macros" }
composable-rust-postgres = { path = "../../postgres" }
composable-rust-redpanda = { path = "../../redpanda" }
composable-rust-projections = { path = "../../projections" }
composable-rust-web = { path = "../../web" }
composable-rust-auth = { path = "../../auth", features = ["postgres", "axum"] }
composable-rust-tools = { path = "../../tools" }

# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1"
chrono = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
smallvec = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
sqlx = { workspace = true }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
axum = { version = "0.7", features = ["macros"] }
bincode = "1.3"
async-trait = "0.1"
dotenvy = "0.15"

[dev-dependencies]
proptest = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.24"
tokio-stream = "0.1"

[lints]
workspace = true
