[package]
name = "weather-agent"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
# Composable Rust
composable-rust-core = { path = "../../core" }
composable-rust-runtime = { path = "../../runtime" }
composable-rust-anthropic = { path = "../../anthropic" }
basic-agent = { path = "../basic-agent" }

# Async runtime
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
async-stream = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = "1"

# Error handling
thiserror = { workspace = true }

# Utilities
smallvec = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
